--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -10,9 +10,9 @@ name: Front CI/CD
 
 on:
   push:
-    branches: [ "main", "dev", "feat/**" ]
+    branches: [ "main", "dev", "feature/**" ]
   pull_request:
-    branches: [ "main", "dev", "feat/**" ]
+    branches: [ "main", "dev", "feature/**" ]
 
 jobs:
   call-deploy-workflow:
