--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -21,5 +21,5 @@ jobs:
     secrets:
       SSH_IP: ${{ secrets.SSH_IP }}
       SSH_ID: ${{ secrets.SSH_ID }}
-      SSH_KEY: ${{ secrets.SSH_KEY }}
+      SSH_PW: ${{ secrets.SSH_PW }}
       SSH_PORT: ${{ secrets.SSH_PORT }}
