refactor target경로 수정

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -31,6 +31,6 @@ jobs:
           port: ${{ secrets.SSH_PORT }}
           source: "./"
 
-          target: "/nginx/site.config"
+          target: "~/"
 
           rm: true
