--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -21,16 +21,16 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+
       - name: upload file
         uses: appleboy/scp-action@master
-
         with:
           host: ${{ secrets.SSH_IP }}
           username: ${{ secrets.SSH_ID }}
           password: ${{ secrets.SSH_PW }}
           port: ${{ secrets.SSH_PORT }}
-          source: "./"
+          source: BOOK/, member/, order/
 
-          target: "~/"
+          target: ~/www/nhnbook
 
-          rm: true
+          rm: false
