--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,12 +1,7 @@
-# This workflow will build a Java project with Maven, and cache/restore any dependencies to improve the workflow execution time
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-maven
+# This workflow will build a Java project (like Spring Boot with Thymeleaf)
+# using Maven, and deploy the executable JAR file to a server.
 
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
-name: Front CI/CD
+name: Backend CI/CD (Java/Thymeleaf)
 
 on:
   push:
@@ -15,22 +10,77 @@ on:
     branches: [ "main", "dev", "feature/**" ]
 
 jobs:
-  deploy:
+  build-and-deploy-java: # Job 이름을 Java 배포용으로 변경
+
+    # main 브랜치에 push 될 때만 배포를 실행합니다.
+    # (dev나 feature 브랜치에서는 빌드/테스트만 하도록 설정할 수도 있습니다)
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
 
     runs-on: ubuntu-latest
 
     steps:
+      # 1. 코드 체크아웃
       - uses: actions/checkout@v4
 
-      - name: upload file
+      # 2. [추가] JDK 17 설정 (프로젝트에 맞는 버전으로 변경하세요: '11', '17', '21' 등)
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: '21'
+          distribution: 'temurin'
+          cache: 'maven' # Gradle을 쓴다면 'gradle'로 변경
+
+      # 3. [추가] Maven으로 프로젝트 빌드 (JAR 파일 생성)
+      # 이 스텝이 성공하면 'target/' 디렉토리에 .jar 파일이 생성됩니다.
+      - name: Build with Maven
+        run: mvn clean package
+        # (참고: Gradle을 사용하신다면 'run: ./gradlew build' 로 변경)
+
+      # 4. [수정] 빌드된 .jar 파일을 SCP를 이용해 서버로 전송
+      - name: Upload JAR file via SCP
         uses: appleboy/scp-action@master
         with:
           host: ${{ secrets.SSH_IP }}
           username: ${{ secrets.SSH_ID }}
           password: ${{ secrets.SSH_PW }}
           port: ${{ secrets.SSH_PORT }}
-          source: index.html, member/, order/
 
-          target: ~/www/nhnbook
+          # [수정된 부분]
+          # 'target/' 디렉토리 아래에 생성된 .jar 파일을 전송합니다.
+          source: "target/*.jar"
 
-          rm: false
+          # 'source'에서 지정한 파일을 이 'target' 디렉토리로 전송합니다.
+          target: "~/www/nhnbook"
+
+          # 'target/' 디렉토리 구조를 제거하고 파일(.jar)만 전송합니다.
+          strip_components: 1
+
+      # 5. [추가] SSH를 이용해 서버에서 .jar 파일 실행
+      - name: Run JAR file on server via SSH
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.SSH_IP }}
+          username: ${{ secrets.SSH_ID }}
+          password: ${{ secrets.SSH_PW }}
+          port: ${{ secrets.SSH_PORT }}
+          script: |
+            # 1. .jar 파일이 업로드된 디렉토리로 이동
+            cd ~/www/nhnbook
+            
+            # 2. 방금 업로드한 .jar 파일의 이름을 찾습니다 (가장 최신 파일)
+            JAR_NAME=$(ls -t *.jar | head -n 1)
+            
+            # 3. 기존에 실행 중이던 Java 프로세스(이전 버전)를 찾아서 종료
+            # 'pgrep -f $JAR_NAME' 는 $JAR_NAME 변수를 포함하는 모든 프로세스 ID(PID)를 찾습니다.
+            PID=$(pgrep -f $JAR_NAME)
+            if [ -n "$PID" ]; then
+              echo "Stopping existing process (PID: $PID)..."
+              kill -15 $PID
+              sleep 5 # 종료 대기
+            fi
+            
+            # 4. 새로운 .jar 파일 실행
+            # nohup: SSH 세션이 끊겨도 프로세스가 계속 실행되도록 함
+            # > app.log 2>&1 &: 표준 출력(stdout)과 표준 에러(stderr)를 app.log 파일에 기록하고, 백그라운드에서 실행
+            echo "Starting new process: $JAR_NAME"
+            nohup java -jar $JAR_NAME > app.log 2>&1 &
