--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,6 +1,3 @@
-# This workflow will build a Java project (like Spring Boot with Thymeleaf)
-# using Maven, and deploy the executable JAR file to a server.
-
 name: Backend CI/CD (Java/Thymeleaf)
 
 on:
@@ -10,7 +7,7 @@ on:
     branches: [ "main", "dev", "feature/**" ]
 
 jobs:
-  build-and-deploy-java: # Job 이름을 Java 배포용으로 변경
+  build-and-deploy-java:
 
 
 
@@ -27,8 +24,6 @@ jobs:
           distribution: 'temurin'
           cache: 'maven' # Gradle을 쓴다면 'gradle'로 변경
 
-      # 3. [추가] Maven으로 프로젝트 빌드 (JAR 파일 생성)
-      # 이 스텝이 성공하면 'target/' 디렉토리에 .jar 파일이 생성됩니다.
       - name: Build with Maven
         run: mvn clean package
 
@@ -75,8 +70,7 @@ jobs:
               sleep 5 # 종료 대기
             fi
             
-            # 4. 새로운 .jar 파일 실행
-            # nohup: SSH 세션이 끊겨도 프로세스가 계속 실행되도록 함
-            # > app.log 2>&1 &: 표준 출력(stdout)과 표준 에러(stderr)를 app.log 파일에 기록하고, 백그라운드에서 실행
-            echo "Starting new process: $JAR_NAME on port 10481"
-            nohup java -jar -Dserver.port=10481 $JAR_NAME > app.log 2>&1 &
+            # 4. 새로운 .jar 파일 실행 (포트 지정 옵션 제거됨)
+            # [수정됨] .jar 파일 내의 application.yml에 설정된 포트로 실행됩니다.
+            echo "Starting new process: $JAR_NAME (using embedded port)"
+            nohup java -jar $JAR_NAME > app.log 2>&1 &
