--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,3 +1,6 @@
+# This workflow will build a Java project (like Spring Boot with Thymeleaf)
+# using Maven, and deploy the executable JAR file to a server.
+
 name: Backend CI/CD (Java/Thymeleaf)
 
 on:
@@ -7,7 +10,7 @@ on:
     branches: [ "main", "dev", "feature/**" ]
 
 jobs:
-  build-and-deploy-java:
+  build-and-deploy-java: # Job 이름을 Java 배포용으로 변경
 
 
 
@@ -24,6 +27,8 @@ jobs:
           distribution: 'temurin'
           cache: 'maven' # Gradle을 쓴다면 'gradle'로 변경
 
+      # 3. [추가] Maven으로 프로젝트 빌드 (JAR 파일 생성)
+      # 이 스텝이 성공하면 'target/' 디렉토리에 .jar 파일이 생성됩니다.
       - name: Build with Maven
         run: mvn clean package
 
@@ -61,16 +66,22 @@ jobs:
             # 2. 방금 업로드한 .jar 파일의 이름을 찾습니다 (가장 최신 파일)
             JAR_NAME=$(ls -t *.jar | head -n 1)
             
-            # 3. 기존에 실행 중이던 Java 프로세스(이전 버전)를 찾아서 종료
-            # 'pgrep -f $JAR_NAME' 는 $JAR_NAME 변수를 포함하는 모든 프로세스 ID(PID)를 찾습니다.
-            PID=$(pgrep -f $JAR_NAME)
+            # 3. [수정됨] 10481 포트를 사용하는 기존 프로세스를 찾아 종료 (더 확실한 방법)
+            # lsof -t -i:[PORT] 는 해당 포트를 사용하는 PID만 깔끔하게 반환합니다.
+            PID=$(lsof -t -i:10481)
+            
             if [ -n "$PID" ]; then
-              echo "Stopping existing process (PID: $PID)..."
+              echo "Stopping existing process on port 10481 (PID: $PID)..."
               kill -15 $PID
               sleep 5 # 종료 대기
             fi
             
-            # 4. 새로운 .jar 파일 실행 (포트 지정 옵션 제거됨)
-            # [수정됨] .jar 파일 내의 application.yml에 설정된 포트로 실행됩니다.
+            # 4. [수정됨] 'java' 대신 'which java'로 찾은 절대 경로를 사용합니다.
+            # 1단계에서 'which java'로 찾은 경로를 아래 JAVA_PATH 변수에 붙여넣으세요!
+            JAVA_PATH="/usr/local/java/java21/bin/java" # <--- ★★★ 여기를 알려주신 경로로 수정했습니다 ★★★
+            
             echo "Starting new process: $JAR_NAME (using embedded port)"
-            nohup java -jar $JAR_NAME > app.log 2>&1 &
+            echo "Using Java Path: $JAVA_PATH"
+            
+            # $JAVA_PATH를 따옴표로 감싸서 실행
+            nohup "$JAVA_PATH" -jar $JAR_NAME > app.log 2>&1 &
