--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,7 +1,4 @@
-# This workflow will build a Java project (like Spring Boot with Thymeleaf)
-# using Maven, and deploy the executable JAR file to a server.
-
-name: Front CI/CD (Java/Thymeleaf)
+name: Front CI/CD (Blue/Green Docker)
 
 on:
   push:
@@ -10,44 +7,10 @@ on:
     branches: [ "main", "dev", "feature/**" ]
 
 jobs:
-  build-and-deploy-java: # Job 이름을 Java 배포용으로 변경
-
-
-
+  build-push-and-deploy:
     runs-on: ubuntu-latest
-
     steps:
-      # 1. 코드 체크아웃
-      - uses: actions/checkout@v4
-
-      - name: Set up JDK 21
-        uses: actions/setup-java@v4
-        with:
-          java-version: '21'
-          distribution: 'temurin'
-          cache: 'maven' # Gradle을 쓴다면 'gradle'로 변경
-
-      # 3. [추가] Maven으로 프로젝트 빌드 (JAR 파일 생성)
-      # 이 스텝이 성공하면 'target/' 디렉토리에 .jar 파일이 생성됩니다.
-      - name: Build with Maven
-        run: mvn clean package
-
-          # 2. Docker Hub 로그인
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }} # (시크릿 이름 확인)
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
-
-      # 3. Docker 이미지 빌드 및 푸시
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          push: true
-          # 2번에서 정의한 'front_server' 이미지 이름
-          tags: fbxogns123/front-server:latest
+      # ... (빌드, 푸시 단계는 동일) ...
 
       # 4. SSH로 B/G 배포 스크립트 실행
       - name: Run Blue/Green Deploy Script on Server
@@ -58,13 +21,11 @@ jobs:
           password: ${{ secrets.SSH_PW }}
           port: ${{ secrets.SSH_PORT }}
           script: |
-            # 이 스크립트는 'front_server'만 재시작하고 Nginx 트래픽을 전환합니다.
-            
             DEPLOY_PATH="~/www/nhnbook"
             SERVICE_NAME="front_server"
             NGINX_CONF_PATH="/home/backend/be12-team5/nginx"
             
-            # --- 🔵 블루/그린 포트 정의 ---
+            # --- 🔵 프론트 포트 정의 (요청대로 수정) ---
             BLUE_PORT="10483"
             GREEN_PORT="10484"
             
@@ -88,7 +49,7 @@ jobs:
             docker-compose -f docker-compose-infra.yml -f $TARGET_COMPOSE_FILE pull $SERVICE_NAME
             docker-compose -f docker-compose-infra.yml -f $TARGET_COMPOSE_FILE up -d --no-deps $SERVICE_NAME
 
-            # --- 4. (중요) 헬스체크 (간단히 sleep) ---
+            # --- 4. 헬스체크 (간단히 sleep) ---
             echo "Waiting for 30 seconds for service to start..."
             sleep 30 
             
