--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -11,6 +11,32 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
+      # 1. 코드 체크아웃
+      - uses: actions/checkout@v4
+
+      # 2. JDK 21 설정
+      - name: Set up JDK 21
+        uses: ...
+
+      # 3. Maven으로 .jar 빌드
+      - name: Build with Maven
+        run: mvn clean package
+
+      # ⬇️ 여기 로그인 코드가 있습니다 ⬇️
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      # ⬇️ 여기 Docker 빌드/푸시 코드가 있습니다 ⬇️
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          tags: fbxogns123/front-server:latest
+
       # 4. SSH로 B/G 배포 스크립트 실행
       - name: Run Blue/Green Deploy Script on Server
         uses: appleboy/ssh-action@master
